# general-python-scripts

markdown/: README.md  confluence-to-md.py  pyproject.toml  requirements.txt
