[project]
name = "confluence-to-md"
version = "0.1.0"
description = "Confluence Space to Markdown exporter"
authors = [
    {name = "User", email = "user@example.com"},
]
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "pyyaml>=6.0",
    "pypandoc>=1.11",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.ruff]
line-length = 120
target-version = "py38"

[tool.mypy]
python_version = "3.8"
strict = true
ignore_missing_imports = true
